[gd_scene load_steps=22 format=2]

[ext_resource path="res://Arimo-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Graphics/fille tuto.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Tutorial.gd" type="Script" id=3]
[ext_resource path="res://Graphics/arrow.png" type="Texture" id=4]
[ext_resource path="res://Graphics/game over bien.png" type="Texture" id=5]
[ext_resource path="res://Graphics/game over mal.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.227451, 0.141176, 0, 1 )
border_width_left = 2
border_width_top = 2
border_color = Color( 0.337255, 0.196078, 0, 1 )
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
shadow_size = 1
shadow_offset = Vector2( 2, 2 )

[sub_resource type="Animation" id=8]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Panel:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 480, -0.25, 0, 0.25, 0, 432.373, -0.2, -2.88312, 0.25, 0 ),
"times": PoolRealArray( 0.5, 1 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("TextureRect:rect_position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 680, -0.25, 0, 0.1, -38.7724, 640.53, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 1.5 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.494118 ) ]
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Panel:rect_position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 308, -0.25, 0, 0.25, 0, 308, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5, 1 )
}

[sub_resource type="Animation" id=12]
resource_name = "End"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 308, 484 ) ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Panel:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 308, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Panel:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 432, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("TextureRect:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("TextureRect:rect_position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 640, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("TextureRect:rect_position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 68, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "value"
tracks/7/path = NodePath("ColorRect:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.309804 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath(".:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 1, 1, 0, 1 )
border_blend = true

[sub_resource type="Animation" id=6]
resource_name = "Blink"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BuildButtons:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.321569 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BuildButtons:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;

void vertex() {
  VERTEX += vec2(0, 1.5 * sin(12.0 * TIME));
}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 10 )

[sub_resource type="Animation" id=13]
resource_name = "MovePerson"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath("TextureRect:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 640.53, -0.25, 0, 0.25, 0, 640.53, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("TextureRect:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 68, -0.25, 0, 0.1, -3.11374, 50.6996, -0.1, 0.465137, 0.1, 0.232567, 68, -0.1, -1.86055, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4 )
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("TextureRect:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 640.53, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("TextureRect:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 68, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=15]
resource_name = "FadeBG"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("BGWin:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BGLose:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BGWin:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BGLose:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Tutorial" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
theme = SubResource( 2 )
script = ExtResource( 3 )

[node name="BGWin" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_right = 16.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="BGLose" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_right = 16.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.309804 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 640.53
margin_top = 68.0
margin_right = 940.53
margin_bottom = 524.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -204.0
margin_top = -168.0
margin_right = 204.0
margin_bottom = -52.0
custom_styles/panel = SubResource( 9 )

[node name="Label" type="RichTextLabel" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
bbcode_enabled = true
visible_characters = 0
percent_visible = 0.0

[node name="Button" type="TextureButton" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Begin = SubResource( 8 )
anims/End = SubResource( 12 )
anims/RESET = SubResource( 4 )

[node name="BuildButtons" type="Panel" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -144.0
margin_bottom = 148.0
custom_styles/panel = SubResource( 5 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "Blink"
anims/Blink = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="Arrow" type="TextureRect" parent="."]
visible = false
material = SubResource( 11 )
margin_left = 684.0
margin_top = 524.0
margin_right = 700.0
margin_bottom = 536.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="AnimationPlayer3" type="AnimationPlayer" parent="."]
anims/MovePerson = SubResource( 13 )
anims/RESET = SubResource( 14 )

[node name="AnimationPlayer4" type="AnimationPlayer" parent="."]
anims/FadeBG = SubResource( 15 )
anims/RESET = SubResource( 16 )

[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer4" to="." method="_on_AnimationPlayer4_animation_finished"]
